@@ -1,5 +1,7 @@
 #VERSION 0.9.6#
 
+ - removed deprecated class Peak_View_Helper_Calendar
+ - renamed helpers file with first capital letter
  - fixed table/schema name in _getData() of class Peak_Model_Pagination
  - fixed old bug in class "Peak_Helpers" that prevented methods __get() and exists() from sometimes validate a file's existence 
    on an case sensitive os.
